# os-api-ref

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  RELEASING.rst  TESTS.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  http-status.yaml  index.rst  installation.rst  usage.rst
os_api_ref/: __init__.py  http_codes.py
os_api_ref/assets/: api-site.css  api-site.js  combobox.js
os_api_ref/tests/: base.py  test_basic_example.py  test_microversions.py  test_os_api_ref.py  test_warnings.py
os_api_ref/tests/examples/basic/: conf.py  index.rst  parameters.yaml  status.yaml
os_api_ref/tests/examples/microversions/: conf.py  index.rst  parameters.yaml
os_api_ref/tests/examples/warnings/: conf.py  empty_parameters_file.yaml  index.rst  parameters.yaml
