[metadata]
name = os-api-ref
summary = Sphinx Extensions to support API reference sites in OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/os-api-ref/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython


[files]
packages =
    os_api_ref

[compile_catalog]
directory = os_api_ref/locale
domain = os_api_ref

[update_catalog]
domain = os_api_ref
output_dir = os_api_ref/locale
input_file = os_api_ref/locale/os_api_ref.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_api_ref/locale/os_api_ref.pot
